# groupie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
res/: generate_ico.py  groupie.manifest  groupie.rc
src/: main.cpp
src/config/: settings.cpp  settings.h
src/core/: app.cpp  app.h  drag_detector.cpp  drag_detector.h  group_manager.cpp  group_manager.h  tab_group.cpp  tab_group.h  window_monitor.cpp  window_monitor.h
src/input/: keyboard_hook.cpp  keyboard_hook.h  mouse_hook.cpp  mouse_hook.h
src/ui/: renderer.cpp  renderer.h  snap_indicator.cpp  snap_indicator.h  tab_bar_window.cpp  tab_bar_window.h  tab_renderer.cpp  tab_renderer.h  theme.cpp  theme.h
src/util/: com_ptr.h  icon_cache.cpp  icon_cache.h  log.h  taskbar.cpp  taskbar.h  win32_helpers.h
